// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconBadge Component renders default icon badge correctly 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-2"
>
  <svg
    class="text-sky-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
    />
    <path
      d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with combined variant and size 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-emerald-100 p-1"
>
  <svg
    class="text-emerald-700 h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <polyline
      points="22 4 12 14.01 9 11.01"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different icons: icon-badge-icon-alert-triangle 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-2"
>
  <svg
    class="text-sky-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different icons: icon-badge-icon-book-open 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-2"
>
  <svg
    class="text-sky-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
    />
    <path
      d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different icons: icon-badge-icon-check-circle 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-2"
>
  <svg
    class="text-sky-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <polyline
      points="22 4 12 14.01 9 11.01"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different icons: icon-badge-icon-star 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-2"
>
  <svg
    class="text-sky-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different sizes: icon-badge-size-default 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-2"
>
  <svg
    class="text-sky-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different sizes: icon-badge-size-sm 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-1"
>
  <svg
    class="text-sky-700 h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different variants: icon-badge-variant-default 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-sky-100 p-2"
>
  <svg
    class="text-sky-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <polyline
      points="22 4 12 14.01 9 11.01"
    />
  </svg>
</div>
`;

exports[`IconBadge Component renders icon badge with different variants: icon-badge-variant-success 1`] = `
<div
  class="rounded-full flex items-center justify-center bg-emerald-100 p-2"
>
  <svg
    class="text-emerald-700 h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <polyline
      points="22 4 12 14.01 9 11.01"
    />
  </svg>
</div>
`;
